--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
   </style>
 
 </head>
-<body class="ml-2">
+<body class="">
   <!-- Header -->
   <header id="home">
    
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <nav class="bg-white border-gray-200 dark:bg-gray-900 ">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between  p-4 ">
         
         <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">दिव्या पटेल</span>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap text-indigo-600">दिव्या पटेल</span>
         </a>
         <button id="mobile-menu-toggle" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
@@ -95,27 +95,33 @@
 <!-- Media Coverage Section -->
 <!-- Media Coverage Section -->
  <br/>
-<section id="media-coverage" class="container mx-auto py-12 px-4 md:px-0 bg-slate-500">
+ <section id="media-coverage" class="py-12 md:px-0 relative overflow-hidden">
   <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">मीडिया कवरेज</h2>
-  <div class="relative overflow-hidden h-96 w-96"> <!-- Set a fixed height for the carousel -->
+  <div class="overflow-hidden h-96 w-96 mx-auto"> <!-- Center the carousel and set dimensions -->
       <div id="mediaCarousel" class="flex transition-transform duration-500">
           <div class="media-item w-full flex-shrink-0">
               <img src="image/1img.png" alt="Media Coverage 1" class="w-full h-full object-cover">
           </div>
           <div class="media-item w-full flex-shrink-0">
-              <img src="image/2img.png" alt="Media Coverage 2" class="w-full h-full object-cover">
+              <img src="image/7img.jpeg" alt="Media Coverage 2" class="w-full h-full object-cover">
           </div>
           <div class="media-item w-full flex-shrink-0">
-              <img src="image/3img.png" alt="Media Coverage 3" class="w-full h-full object-cover">
+              <img src="image/8img.jpeg" alt="Media Coverage 3" class="w-full h-full object-cover">
           </div>
           <div class="media-item w-full flex-shrink-0">
-              <img src="image/4img.png" alt="Media Coverage 4" class="w-full h-full object-cover">
+              <img src="image/9img.jpg" alt="Media Coverage 4" class="w-full h-full object-cover">
           </div>
           <div class="media-item w-full flex-shrink-0">
               <img src="image/5img.png" alt="Media Coverage 5" class="w-full h-full object-cover">
           </div>
           <div class="media-item w-full flex-shrink-0">
               <img src="image/6img.png" alt="Media Coverage 6" class="w-full h-full object-cover">
+          </div>
+          <div class="media-item w-full flex-shrink-0">
+            <img src="image/10image.jpg" alt="Media Coverage 5" class="w-full h-full object-cover">
+          </div>
+          <div class="media-item w-full flex-shrink-0">
+            <img src="image/11image.jpg" alt="Media Coverage 6" class="w-full h-full object-cover">
           </div>
       </div>
   </div>
@@ -165,17 +171,15 @@
 <section id="work" class="w-full bg-cover bg-center py-16 px-6 bg-gradient-to-r from-gray-100 via-gray-200 to-gray-300 relative overflow-hidden" style="background-image: url('./image/6img.png'); background-size: cover; background-position: center;">
   <h2 class="text-4xl font-bold text-violet-900 mb-12 text-center animate__animated animate__fadeIn relative z-10">
     कार्य अनुभव
-    
   </h2>
   
-  <div class="work-grid grid md:grid-cols-3 gap-12">
+  <div class="work-grid grid md:grid-cols-3 gap-12 relative z-10">
     <!-- Work Item 1 -->
     <div class="work-item relative bg-white rounded-xl p-8 transform transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:bg-indigo-50 animate__animated animate__fadeIn" style="animation-delay: 0.1s;">
       <h3 class="text-2xl font-semibold mb-4 text-indigo-600">समुदाय आउटरीच कार्यक्रम</h3>
       <p class="text-gray-600 mb-4">एक समुदाय आउटरीच कार्यक्रम का नेतृत्व किया, जिसमें बेघर व्यक्तियों को भोजन, आश्रय, और मानसिक स्वास्थ्य समर्थन प्रदान किया गया।</p>
       <p class="text-gray-600">इस कार्यक्रम ने 500 से अधिक व्यक्तियों को तत्काल सहायता प्रदान की और दीर्घकालिक समाधान खोजने में मदद की।</p>
-      <!-- Stylish Adhik Jaankari Button with relative positioning -->
-      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg">
+      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg z-20">
         अधिक जानकारी
       </a>
     </div>
@@ -184,8 +188,7 @@
       <h3 class="text-2xl font-semibold mb-4 text-indigo-600">युवाओं के विकास की पहल</h3>
       <p class="text-gray-600 mb-4">शिक्षा और जीवन कौशल प्रशिक्षण के माध्यम से युवाओं को सशक्त बनाने पर केंद्रित कार्यशालाओं और कार्यक्रमों का आयोजन किया।</p>
       <p class="text-gray-600">इस पहल के तहत, 200 से अधिक युवाओं ने पेशेवर कौशल सीखे और नौकरी के अवसर प्राप्त किए।</p>
-      <!-- Stylish Adhik Jaankari Button with relative positioning -->
-      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg">
+      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg z-20">
         अधिक जानकारी
       </a>
     </div>
@@ -194,8 +197,7 @@
       <h3 class="text-2xl font-semibold mb-4 text-indigo-600">परिवार सहायता सेवाएँ</h3>
       <p class="text-gray-600 mb-4">कम आय वाले परिवारों के लिए संकट के समय पारिवारिक परामर्श और सहायता सेवाएँ प्रदान कीं।</p>
       <p class="text-gray-600">मेरी मदद से, कई परिवारों ने अपने मुद्दों का समाधान किया और बेहतर जीवन जीने के लिए कदम उठाए।</p>
-      <!-- Stylish Adhik Jaankari Button with relative positioning -->
-      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg">
+      <a href="#" class="bg-indigo-600 text-white py-2 px-4 rounded-full font-semibold hover:bg-indigo-700 transition-colors duration-300 relative top-4 shadow-md hover:shadow-lg z-20">
         अधिक जानकारी
       </a>
     </div>
